--- a/crates/background/Cargo.toml
+++ b/crates/background/Cargo.toml
@@ -9,8 +9,8 @@ common-models = { path = "../models/common" }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
 enums = { path = "../enums" }
-fitness_models = { path = "../models/fitness" }
-media_models = { path = "../models/media" }
+fitness-models = { path = "../models/fitness" }
+media-models = { path = "../models/media" }
 serde = { workspace = true }
 strum = { workspace = true }
 uuid = { workspace = true }
