--- a/crates/models/dependent/Cargo.toml
+++ b/crates/models/dependent/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dependent_models"
+name = "dependent-models"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,9 +8,9 @@ async-graphql = { workspace = true }
 common-models = { path = "../common" }
 database-models = { path = "../database" }
 enums = { path = "../../enums" }
-importer_models = { path = "../importer" }
-media_models = { path = "../media" }
-fitness_models = { path = "../fitness" }
+importer-models = { path = "../importer" }
+media-models = { path = "../media" }
+fitness-models = { path = "../fitness" }
 rust_decimal = { workspace = true }
 schematic = { workspace = true }
 serde = { workspace = true }
