--- a/crates/models/fitness/Cargo.toml
+++ b/crates/models/fitness/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "fitness_models"
+name = "fitness-models"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-application_utils = { path = "../../utils/application" }
+application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 async-trait = { workspace = true }
 common-models = { path = "../../models/common" }
@@ -14,7 +14,7 @@ derive_more = { version = "=1.0.0-beta.6", features = [
   "add_assign",
 ], default-features = false }
 enums = { path = "../../enums" }
-file_storage_service = { path = "../../services/file_storage" }
+file-storage-service = { path = "../../services/file-storage" }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 schematic = { workspace = true }
