--- a/crates/models/user/Cargo.toml
+++ b/crates/models/user/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "user_models"
+name = "user-models"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 async-graphql = { workspace = true }
 common-models = { path = "../../models/common" }
-fitness_models = { path = "../../models/fitness" }
+fitness-models = { path = "../../models/fitness" }
 sea-orm = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
