--- a/crates/resolvers/importer/Cargo.toml
+++ b/crates/resolvers/importer/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "importer_resolver"
+name = "importer-resolver"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 async-graphql = { workspace = true }
 database-models = { path = "../../models/database" }
-importer_service = { path = "../../services/importer" }
-media_models = { path = "../../models/media" }
+importer-service = { path = "../../services/importer" }
+media-models = { path = "../../models/media" }
 traits = { path = "../../traits" }
