--- a/crates/resolvers/miscellaneous/Cargo.toml
+++ b/crates/resolvers/miscellaneous/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "miscellaneous_resolver"
+name = "miscellaneous-resolver"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,8 +7,8 @@ edition = "2021"
 async-graphql = { workspace = true }
 common-models = { path = "../../models/common" }
 database-models = { path = "../../models/database" }
-dependent_models = { path = "../../models/dependent" }
-media_models = { path = "../../models/media" }
-miscellaneous_service = { path = "../../services/miscellaneous" }
+dependent-models = { path = "../../models/dependent" }
+media-models = { path = "../../models/media" }
+miscellaneous-service = { path = "../../services/miscellaneous" }
 traits = { path = "../../traits" }
-user_models = { path = "../../models/user" }
+user-models = { path = "../../models/user" }
