--- a/crates/services/Cargo.toml
+++ b/crates/services/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-exporter_service = { path = "./exporter" }
-file_storage_service = { path = "./file_storage" }
-fitness_service = { path = "./fitness" }
-importer_service = { path = "./importer" }
-integration_service = { path = "./integration" }
-jwt_service = { path = "./jwt" }
-miscellaneous_service = { path = "./miscellaneous" }
-notification_service = { path = "./notification" }
+exporter-service = { path = "./exporter" }
+file-storage-service = { path = "./file-storage" }
+fitness-service = { path = "./fitness" }
+importer-service = { path = "./importer" }
+integration-service = { path = "./integration" }
+jwt-service = { path = "./jwt" }
+miscellaneous-service = { path = "./miscellaneous" }
+notification-service = { path = "./notification" }
