--- a/crates/services/exporter/Cargo.toml
+++ b/crates/services/exporter/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "exporter_service"
+name = "exporter-service"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,13 +9,13 @@ async-graphql = { workspace = true }
 background = { path = "../../background" }
 chrono = { workspace = true }
 common-models = { path = "../../models/common" }
-common_utils = { path = "../../utils/common" }
+common-utils = { path = "../../utils/common" }
 database-models = { path = "../../models/database" }
-database_utils = { path = "../../utils/database" }
+database-utils = { path = "../../utils/database" }
 config = { path = "../../config" }
-file_storage_service = { path = "../file_storage" }
-fitness_models = { path = "../../models/fitness" }
-media_models = { path = "../../models/media" }
+file-storage-service = { path = "../file-storage" }
+fitness-models = { path = "../../models/fitness" }
+media-models = { path = "../../models/media" }
 mime_guess = "=2.0.5"
 nanoid = { workspace = true }
 reqwest = { workspace = true }
