--- a/crates/services/importer/Cargo.toml
+++ b/crates/services/importer/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "importer_service"
+name = "importer-service"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
 apalis = { workspace = true }
-application_utils = { path = "../../utils/application" }
+application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 background = { path = "../../background" }
 chrono = { workspace = true }
@@ -16,18 +16,18 @@ csv = "=1.3.0"
 data-encoding = "=2.6.0"
 enum_meta = { workspace = true }
 common-models = { path = "../../models/common" }
-common_utils = { path = "../../utils/common" }
+common-utils = { path = "../../utils/common" }
 database-models = { path = "../../models/database" }
-database_utils = { path = "../../utils/database" }
-dependent_models = { path = "../../models/dependent" }
+database-utils = { path = "../../utils/database" }
+dependent-models = { path = "../../models/dependent" }
 enums = { path = "../../enums" }
-fitness_models = { path = "../../models/fitness" }
-fitness_service = { path = "../../services/fitness" }
+fitness-models = { path = "../../models/fitness" }
+fitness-service = { path = "../../services/fitness" }
 flate2 = "=1.0.30"
-importer_models = { path = "../../models/importer" }
+importer-models = { path = "../../models/importer" }
 itertools = { workspace = true }
-media_models = { path = "../../models/media" }
-miscellaneous_service = { path = "../../services/miscellaneous" }
+media-models = { path = "../../models/media" }
+miscellaneous-service = { path = "../../services/miscellaneous" }
 providers = { path = "../../providers" }
 regex = { workspace = true }
 reqwest = { workspace = true }
@@ -38,7 +38,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
 serde-xml-rs = "=0.6.0"
-specific_models = { path = "../../models/specific" }
+specific-models = { path = "../../models/specific" }
 tracing = { workspace = true }
 traits = { path = "../../traits" }
-user_models = { path = "../../models/user" }
+user-models = { path = "../../models/user" }
