--- a/crates/traits/Cargo.toml
+++ b/crates/traits/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
-application_utils = { path = "../utils/application" }
-dependent_models = { path = "../models/dependent" }
+application-utils = { path = "../utils/application" }
+dependent-models = { path = "../models/dependent" }
 async-graphql = { workspace = true }
 async-trait = { workspace = true }
 common-models = { path = "../models/common" }
 database-models = { path = "../models/database" }
-media_models = { path = "../models/media" }
+media-models = { path = "../models/media" }
 sea-orm = { workspace = true }
 tracing = { workspace = true }
