--- a/crates/utils/database/Cargo.toml
+++ b/crates/utils/database/Cargo.toml
@@ -1,28 +1,28 @@
 [package]
-name = "database_utils"
+name = "database-utils"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 apalis = { workspace = true }
-application_utils = { path = "../../utils/application" }
+application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 background = { path = "../../background" }
 chrono = { workspace = true }
 common-models = { path = "../../models/common" }
 database-models = { path = "../../models/database" }
-dependent_models = { path = "../../models/dependent" }
-file_storage_service = { path = "../../services/file_storage" }
-fitness_models = { path = "../../models/fitness" }
+dependent-models = { path = "../../models/dependent" }
+file-storage-service = { path = "../../services/file-storage" }
+fitness-models = { path = "../../models/fitness" }
 itertools = { workspace = true }
-media_models = { path = "../../models/media" }
+media-models = { path = "../../models/media" }
 migrations = { path = "../../migrations" }
 rust_decimal = { workspace = true }
 markdown = { workspace = true }
 rust_decimal_macros = { workspace = true }
 sea-orm = { workspace = true }
 tracing = { workspace = true }
-user_models = { path = "../../models/user" }
+user-models = { path = "../../models/user" }
 
 [package.metadata.cargo-machete]
 ignored = ["rust_decimal"]
