--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
         id: check
         run: |
           read -r -d '' IMAGE_NAMES << EOM
-            name=${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}
-            name=${{ env.GHCR_REGISTRY }}/${{ github.repository_owner }}/${{ github.event.repository.name }}
+            name=ignisda/${{ github.event.repository.name }}
+            name=${{ env.GHCR_REGISTRY }}/ignisda/${{ github.event.repository.name }}
           EOM
 
           if [[ "${{ github.event_name }}" == "push" ]]; then
@@ -202,7 +202,7 @@ jobs:
       - name: Log in to the docker hub container registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ignisda
           password: ${{ secrets.DOCKER_TOKEN }}
       - name: Extract metadata for Docker
         id: meta
