--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,12 +31,10 @@ jobs:
       - name: Check commit message
         id: check
         run: |
-          set -euxo pipefail
-
-          read -r -d '' IMAGE_NAMES << EOM
-            name="ignisda/${{ github.event.repository.name }}"
-            name="${{ env.GHCR_REGISTRY }}/ignisda/${{ github.event.repository.name }}"
-          EOM
+          IMAGE_NAMES="
+            name=ignisda/${{ github.event.repository.name }}
+            name=${{ env.GHCR_REGISTRY }}/ignisda/${{ github.event.repository.name }}
+          "
 
           if [[ "${{ github.event_name }}" == "push" ]]; then
             echo "should-run=true" >> $GITHUB_OUTPUT
