--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
             if [[ "$COMMIT_MSG" == *"Run CI"* ]]; then
               echo "should-run=true" >> $GITHUB_OUTPUT
               # if it is a forked PR, we need to remove the first line of the IMAGE_NAMES
-              if [[ "${{ github.event.pull_request.head.repo.fork }}" ]]; then
+              if [[ "${{ github.event.pull_request.head.repo.full_name == github.repository }}" ]]; then
                 IMAGE_NAMES=$(echo "$IMAGE_NAMES" | sed '1d')
               fi
             else
@@ -200,12 +200,14 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Log in to the ghcr container registry
         uses: docker/login-action@v3
+        continue-on-error: true
         with:
           registry: ${{ env.GHCR_REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Log in to the docker hub container registry
         uses: docker/login-action@v3
+        continue-on-error: true
         with:
           username: ignisda
           password: ${{ secrets.DOCKER_TOKEN }}
