--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,52 +20,55 @@ jobs:
   pre-workflow-checks:
     runs-on: ubuntu-latest
     outputs:
-      should-run: ${{ steps.check.outputs.should-run }}
-      should-release: ${{ steps.tag.outputs.should-release }}
-      image-names: ${{ steps.check.outputs.image-names }}
+      should-run: ${{ steps.set_outputs.outputs.should-run }}
+      image-names: ${{ steps.set_outputs.outputs.image-names }}
+      should-release: ${{ steps.set_outputs.outputs.should-release }}
 
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
-      - name: Check commit message
-        id: check
-        run: |
-          IMAGE_NAMES="
-            name=ignisda/${{ github.event.repository.name }}
-            name=${{ env.GHCR_REGISTRY }}/${{ github.repository_owner }}/${{ github.event.repository.name }}
-          "
+      - name: Set outputs
+        id: set_outputs
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const repositoryName = context.payload.repository.name;
+            const owner = context.repo.owner;
+            const ghcrRegistry = process.env.GHCR_REGISTRY;
 
-          echo "${{ github.event.pull_request.head.repo.full_name }}"
-          echo "${{ github.repository }}"
+            let imageNames = [
+              `name=ignisda/${repositoryName}`,
+              `name=${ghcrRegistry}/${owner}/${repositoryName}`
+            ];
 
-          if [[ "${{ github.event_name }}" == "push" ]]; then
-            echo "should-run=true" >> $GITHUB_OUTPUT
-          elif [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            COMMIT_MSG=$(git log --format=%B ${{ github.event.pull_request.head.sha }})
-            if [[ "$COMMIT_MSG" == *"Run CI"* ]]; then
-              echo "should-run=true" >> $GITHUB_OUTPUT
-              # if it is a forked PR, we need to remove the first line of the IMAGE_NAMES
-              if [[ "${{ github.event.pull_request.head.repo.full_name == github.repository }}" ]]; then
-                IMAGE_NAMES=$(echo "$IMAGE_NAMES" | sed '1d')
-              fi
-            else
-              echo "should-run=false" >> $GITHUB_OUTPUT
-            fi
-          else
-            echo "should-run=false" >> $GITHUB_OUTPUT
-          fi
+            if (context.eventName === "push") {
+              core.setOutput('should-run', 'true');
+            } else if (context.eventName === "pull_request") {
+              const commitMsg = await github.rest.repos.getCommit({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                ref: context.payload.pull_request.head.sha
+              }).then(commit => commit.data.commit.message);
+              if (commitMsg.includes("Run CI")) {
+                core.setOutput('should-run', 'true');
+                if (context.payload.pull_request.head.repo.full_name !== context.repo.full_name) {
+                  imageNames.shift();
+                }
+              } else {
+                core.setOutput('should-run', 'false');
+              }
+            } else {
+              core.setOutput('should-run', 'false');
+            }
 
-          echo "image-names=$IMAGE_NAMES"
-          echo "image-names=$IMAGE_NAMES" >> $GITHUB_OUTPUT
-      - name: Check tag
-        id: tag
-        run: |
-          if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/tags/${{ github.ref_name }}" ]]; then
-            echo "should-release=true" >> $GITHUB_OUTPUT
-          else
-            echo "should-release=false" >> $GITHUB_OUTPUT
-          fi
+            if (context.eventName === "push" && context.ref.startsWith("refs/tags/")) {
+              core.setOutput('should-release', 'true');
+            } else {
+              core.setOutput('should-release', 'false');
+            }
+
+            core.setOutput('image-names', imageNames.join('\n'));
 
   create-release:
     needs:
