ci: print all outputs
Run CI.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,6 +69,8 @@ jobs:
             }
 
             core.setOutput('image-names', imageNames.join('\n'));
+      - name: Print all outputs
+        run: cat $GITHUB_OUTPUT
 
   create-release:
     needs:
