--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,12 @@ jobs:
         with:
           script: |
             const repositoryName = context.payload.repository.name;
-            const owner = context.repo.owner;
+            const owner = context.actor;
             const ghcrRegistry = process.env.GHCR_REGISTRY;
+            const dockerUsername = process.env.DOCKER_USERNAME;
 
             let imageNames = [
-              `name=ignisda/${repositoryName}`,
+              `name=${dockerUsername}/${repositoryName}`,
               `name=${ghcrRegistry}/${owner}/${repositoryName}`
             ];
 
@@ -69,8 +70,6 @@ jobs:
             }
 
             core.setOutput('image-names', imageNames.join('\n'));
-      - name: Print all outputs
-        run: cat $GITHUB_OUTPUT
 
   create-release:
     needs:
@@ -211,13 +210,13 @@ jobs:
         continue-on-error: true
         with:
           registry: ${{ env.GHCR_REGISTRY }}
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Log in to the docker hub container registry
         uses: docker/login-action@v3
         continue-on-error: true
         with:
-          username: ignisda
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - name: Extract metadata for Docker
         id: meta
