refactor(services,resolvers): extract new service and resolver for statistics

--- a/crates/services/Cargo.toml
+++ b/crates/services/Cargo.toml
@@ -12,3 +12,4 @@ integration-service = { path = "./integration" }
 jwt-service = { path = "./jwt" }
 miscellaneous-service = { path = "./miscellaneous" }
 notification-service = { path = "./notification" }
+statistics-service = { path = "./statistics" }
