--- a/crates/resolvers/Cargo.toml
+++ b/crates/resolvers/Cargo.toml
@@ -13,4 +13,5 @@ file-storage-resolver = { path = "./file-storage" }
 fitness-resolver = { path = "./fitness" }
 importer-resolver = { path = "./importer" }
 miscellaneous-resolver = { path = "./miscellaneous" }
+statistics-resolver = { path = "./statistics" }
 router-resolver = { path = "./router" }
