refactor(services): move summary calculation and querying to statistics service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ convert_case = "=0.6.0"
 dotenvy_macro = "=0.15.7"
 enum_meta = "=0.7.0"
 itertools = "=0.13.0"
+futures = "=0.3.30"
 markdown = "=1.0.0-alpha.18"
 nanoid = "=0.4.0"
 openidconnect = "=3.5.0"
