perf(services): fetch only the required columns

--- a/crates/services/statistics/Cargo.toml
+++ b/crates/services/statistics/Cargo.toml
@@ -10,6 +10,7 @@ common-models = { path = "../../models/common" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
 dependent-models = { path = "../../models/dependent" }
+enums = { path = "../../enums" }
 futures = { workspace = true }
 media-models = { path = "../../models/media" }
 rust_decimal = { workspace = true }
