refactor(resolvers): specify dependencies explicitly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,13 @@ members = [
     "crates/migrations",
     "crates/models",
     "crates/providers",
-    "crates/resolvers",
+    "crates/resolvers/exporter",
+    "crates/resolvers/file-storage",
+    "crates/resolvers/fitness",
+    "crates/resolvers/importer",
+    "crates/resolvers/miscellaneous",
+    "crates/resolvers/statistics",
+    "crates/resolvers/router",
     "crates/services",
     "crates/traits",
     "crates/utils",
