refactor(backend): add explicit imports from services

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,15 @@ members = [
     "crates/resolvers/miscellaneous",
     "crates/resolvers/statistics",
     "crates/resolvers/router",
-    "crates/services",
+    "crates/services/exporter",
+    "crates/services/file-storage",
+    "crates/services/fitness",
+    "crates/services/importer",
+    "crates/services/integration",
+    "crates/services/jwt",
+    "crates/services/miscellaneous",
+    "crates/services/notification",
+    "crates/services/statistics",
     "crates/traits",
     "crates/utils",
 ]
