--- a/crates/providers/Cargo.toml
+++ b/crates/providers/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+application-utils = { path = "../utils/application" }
 async-trait = { workspace = true }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
+common-utils = { path = "../utils/common" }
 config = { path = "../config" }
 const-str = { workspace = true }
 convert_case = { workspace = true }
@@ -31,4 +33,3 @@ serde_with = { workspace = true }
 strum = { workspace = true }
 tracing = { workspace = true }
 traits = { path = "../traits" }
-utils = { path = "../utils" }
