chore(models): remove common crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,14 @@ members = [
     "crates/config",
     "crates/enums",
     "crates/migrations",
-    "crates/models",
+    "crates/models/common",
+    "crates/models/database",
+    "crates/models/dependent",
+    "crates/models/fitness",
+    "crates/models/importer",
+    "crates/models/media",
+    "crates/models/specific",
+    "crates/models/user",
     "crates/providers",
     "crates/resolvers/exporter",
     "crates/resolvers/file-storage",
