refactor(services): create a collection service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "crates/models/specific",
     "crates/models/user",
     "crates/providers",
+    "crates/resolvers/collection",
     "crates/resolvers/exporter",
     "crates/resolvers/file-storage",
     "crates/resolvers/fitness",
@@ -21,6 +22,7 @@ members = [
     "crates/resolvers/miscellaneous",
     "crates/resolvers/statistics",
     "crates/resolvers/router",
+    "crates/services/collection",
     "crates/services/exporter",
     "crates/services/file-storage",
     "crates/services/fitness",
