dev: install zip in devcontainer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM ignisda/archlinux:latest
 
 RUN npm install --global yaml-language-server@next
-RUN paru -Syy --noconfirm caddy postgresql
+RUN paru -Syy --noconfirm caddy postgresql zip
 RUN cargo binstall sea-orm-cli --locked --secure --no-confirm
 RUN curl -L https://fly.io/install.sh | sh
 RUN fish_add_path -Ua "/home/$USERNAME/.fly/bin"
