refactor(services,resolvers): new stuff for user related operations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "crates/resolvers/miscellaneous",
     "crates/resolvers/statistics",
     "crates/resolvers/router",
+    "crates/resolvers/user",
     "crates/services/collection",
     "crates/services/exporter",
     "crates/services/file-storage",
@@ -32,6 +33,7 @@ members = [
     "crates/services/miscellaneous",
     "crates/services/notification",
     "crates/services/statistics",
+    "crates/services/user",
     "crates/traits",
     "crates/utils/application",
     "crates/utils/common",
